--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,8 +25,8 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | sudo docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+#      - name: Login to Docker Hub
+#        run: echo "${{ secrets.DOCKER_PASSWORD }}" | sudo docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Pull image from Docker Hub
         run: sudo docker pull laila23/angular-app:latest
